adjustments fronend and backend
