# server/Api.Websocket/PlantMoistureDto.cs
@@ -1,0 +1,9 @@
+using WebSocketBoilerplate;
+
+namespace Api.Websocket;
+
+public class PlantMoistureDto : BaseDto
+{
+    public string PlantId { get; set; } = default!;
+    public int MoistureLevel { get; set; }
+}
