# server/Application/Models/StringConstants.cs
@@ -2,7 +2,6 @@ namespace Application.Models;
 
 public static class StringConstants
 {
-    // example
-     public const string Dashboard = nameof(Dashboard);
+     public const string PlantDto = nameof(PlantDto);
     
 }
