# server/Startup/openapi.json
@@ -134,10 +134,9 @@
           "200": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "$ref": "#/components/schemas/PlantResponseDto"
                 }
               }
             }
@@ -580,6 +579,26 @@
           }
         }
       },
+      "PlantMoistureDto": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/BaseDto"
+          },
+          {
+            "type": "object",
+            "additionalProperties": false,
+            "properties": {
+              "plantId": {
+                "type": "string"
+              },
+              "moistureLevel": {
+                "type": "integer",
+                "format": "int32"
+              }
+            }
+          }
+        ]
+      },
       "ServerSendsErrorMessage": {
         "allOf": [
           {
@@ -634,10 +653,11 @@
         "enum": [
           "ServerBroadcastsLiveDataToDashboard",
           "MemberLeftNotification",
+          "PlantMoistureDto",
           "ServerSendsErrorMessage",
           "WaterNowClientDto",
           "WaterNowServerResponse",
-          "Dashboard"
+          "PlantDto"
         ]
       }
     }
